--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "array": "c",
-        "numbers": "c"
+        "numbers": "c",
+        "cub3d.h": "c"
     },
     "editor.renderWhitespace": "all"
 }
